🐛(docs) remove 'v' from Chart.yaml versions

--- a/updatecli/updatecli.d/docs.yaml
+++ b/updatecli/updatecli.d/docs.yaml
@@ -96,6 +96,8 @@ targets:
       engine: yamlpath
       file: "helmfile/apps/docs/charts/docs/Chart.yaml"
       key: "$.appVersion"
+    transformers:
+      - trimprefix: "v"
     sourceid: docs_latest_version
     scmid: default
 
