--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,9 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "crowdin:download": "crowdin download",
+    "crowdin:upload": "crowdin upload"
   },
   "dependencies": {
     "@docusaurus/core": "3.9.1",
@@ -25,6 +27,7 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@crowdin/cli": "^4.11.0",
     "@docusaurus/module-type-aliases": "3.9.1",
     "@docusaurus/tsconfig": "3.9.1",
     "@docusaurus/types": "3.9.1",
