--- a/helmfile/apps/element/charts/element-web/values.yaml
+++ b/helmfile/apps/element/charts/element-web/values.yaml
@@ -86,7 +86,7 @@ diagnosticMode:
 image:
   registry: docker.io
   repository: vectorim/element-web
-  tag: latest
+  tag: v1.12.4
   ## Specify a imagePullPolicy
   ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
   ##
