--- a/helmfile/apps/nextcloud/charts/nextcloud/templates/configmap-script-post-install.yaml
+++ b/helmfile/apps/nextcloud/charts/nextcloud/templates/configmap-script-post-install.yaml
@@ -222,6 +222,9 @@ data:
     php /var/www/html/occ config:system:set maintenance_window_start --type=integer --value=1
     php /var/www/html/occ config:system:set default_phone_region --value=NL
 
+    # Set default quota for new users
+    php /var/www/html/occ config:app:set files default_quota --value="{{ .Values.files.defaultQuota }}"
+
   contacts.sh: |-
     #!/bin/bash
 
