✨(openproject) Add external services and improve Chart compatibility

--- a/tests/container-rules.yaml
+++ b/tests/container-rules.yaml
@@ -67,6 +67,10 @@ container:
     registry: ""
     imagePullSecret: ""
 
+  openproject:
+    registry: ""
+    imagePullSecret: ""
+
   docs:
     registry: ""
     imagePullSecret: ""
