✨(nextcloud) Connect to ClamAV toolkit

--- a/helmfile/apps/clamav/charts/clamav/templates/networkpolicy.yaml
+++ b/helmfile/apps/clamav/charts/clamav/templates/networkpolicy.yaml
@@ -38,8 +38,8 @@ spec:
     {{- end }}
   ingress:
     - ports:
-        - port: {{ .Values.clamav.containerPorts.http }}
-        - port: {{ .Values.clamav.containerPorts.https }}
+        - port: {{ .Values.clamav.containerPorts.clamav }}
+        - port: {{ .Values.clamav.containerPorts.milter }}
         {{- range .Values.clamav.extraContainerPorts }}
         - port: {{ .containerPort }}
         {{- end }}
