--- a/helmfile/apps/nextcloud/charts/nextcloud/values.yaml
+++ b/helmfile/apps/nextcloud/charts/nextcloud/values.yaml
@@ -995,3 +995,16 @@ collabora:
 ## Sets the default quota for new users via occ config:app:set files default_quota
 files:
   defaultQuota: "10 GB"
+  ## @param files.antivirus.enabled Enable antivirus app
+  ## @param files.antivirus.host Host of the antivirus tooling
+  ## @param files.antivirus.port Port of the antivirus tooling
+  ## @param files.antivirus.maxStreamSize Maximum stream size in bytes
+  ## @param files.antivirus.infectedAction Action to take when a file is infected, can either be `only_log` or `delete`.
+  ## @param files.antivirus.maxFileSize Maximum file size in bytes. Must be smaller than `maxStreamSize`.
+  antivirus:
+    enabled: false
+    host: ""
+    port: ""
+    maxStreamSize: 2147483648
+    infectedAction: delete
+    maxFileSize: -1
