🎨(openproject) Fix formatting openproject updatecli configuration

--- a/updatecli/updatecli.d/openproject.yaml
+++ b/updatecli/updatecli.d/openproject.yaml
@@ -32,7 +32,7 @@ sources:
     spec:
       owner: opf
       repository: helm-charts
-      token: {{ requiredEnv .github.token }}
+      token: "{{ requiredEnv .github.token }}"
     transformers:
       - trimprefix: "openproject-"
 
