🐛(drive) correct LOGOUT_REDIRECT_URL  and  FRONTEND_HIDE_GAUFRE

--- a/helmfile/apps/drive/charts/drive/templates/configmap.yaml
+++ b/helmfile/apps/drive/charts/drive/templates/configmap.yaml
@@ -25,7 +25,8 @@ data:
   DJANGO_CORS_ALLOWED_ORIGINS: {{ .Values.drive.CORSAllowedOrigins | quote}}
   LOGIN_REDIRECT_URL: {{ .Values.drive.baseUrl | quote }}
   LOGIN_REDIRECT_URL_FAILURE: {{ .Values.drive.baseUrl | quote }}
-  LOGOUT_REDIRECT_UR: {{ .Values.drive.baseUrl | quote }}
+  LOGOUT_REDIRECT_URL: {{ .Values.drive.baseUrl | quote }}
+  FRONTEND_HIDE_GAUFRE: "true"
   DB_HOST: {{ .Values.externalDatabase.host | quote }}
   DB_NAME: {{ .Values.externalDatabase.database | quote }}
   DB_USER: {{ .Values.externalDatabase.username | quote }}
