🐛(docs) Fix PDB job label conflict and add configurable PDB creation
- Add workload label to avoid PDB manifests matching jobs
- Allow PDB creation to be controlled via pdb.docs.<component>.create values

--- a/helmfile/apps/docs/charts/docs/templates/backend-cronjob-list.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/backend-cronjob-list.yaml
@@ -42,6 +42,7 @@ items:
               {{- $podLabels := include "common.tplvalues.merge" (dict "values" (list $.Values.backend.podLabels $.Values.commonLabels) "context" .) }}
               labels: {{- include "common.labels.standard" ( dict "customLabels" $podLabels "context" $ ) | nindent 8 }}
                 app.kubernetes.io/component: backend
+                app.kubernetes.io/workload-type: cronjob
             spec:
               {{- include "docs.imagePullSecrets" $ | nindent 14 }}
               serviceAccountName: {{ template "docs.serviceAccountName" $ }}
