--- a/helmfile/apps/docs/charts/docs/templates/backend-job.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/backend-job.yaml
@@ -30,6 +30,7 @@ spec:
       {{- $podLabels := include "common.tplvalues.merge" (dict "values" (list $.Values.backend.podLabels $.Values.commonLabels) "context" .) }}
       labels: {{- include "common.labels.standard" ( dict "customLabels" $podLabels "context" $ ) | nindent 8 }}
         app.kubernetes.io/component: backend
+        app.kubernetes.io/workload-type: job
     spec:
       {{- include "docs.imagePullSecrets" $ | nindent 6 }}
       serviceAccountName: {{ template "docs.serviceAccountName" $ }}
