--- a/helmfile/apps/drive/charts/drive/values.yaml
+++ b/helmfile/apps/drive/charts/drive/values.yaml
@@ -449,6 +449,43 @@ drive:
       readiness:
         exec:
           command: ["/bin/sh", "-c", "celery -A drive.celery_app inspect ping -d drive@$HOSTNAME"]
+    ## Autoscaling configuration
+    ## ref: https://kubernetes.io/docs/concepts/workloads/autoscaling/
+    ##
+    autoscaling:
+      ## @param backend.celery.autoscaling.vpa.enabled Enable VPA for Celery worker pods
+      ## @param backend.celery.autoscaling.vpa.annotations Annotations for VPA resource
+      ## @param backend.celery.autoscaling.vpa.controlledResources VPA List of resources that the vertical pod autoscaler can control. Defaults to cpu and memory
+      ## @param backend.celery.autoscaling.vpa.maxAllowed VPA Max allowed resources for the pod
+      ## @param backend.celery.autoscaling.vpa.minAllowed VPA Min allowed resources for the pod
+      ##
+      vpa:
+        enabled: false
+        annotations: {}
+        controlledResources: []
+        maxAllowed: {}
+        minAllowed: {}
+        ## @param backend.celery.autoscaling.vpa.updatePolicy.updateMode Autoscaling update policy
+        ## Specifies whether recommended updates are applied when a Pod is started and whether recommended updates are applied during the life of a Pod
+        ## Possible values are "Off", "Initial", "Recreate", and "Auto".
+        ##
+        updatePolicy:
+          updateMode: Auto
+      ## @param backend.celery.autoscaling.hpa.enabled Enable HPA for Celery worker pods
+      ## @param backend.celery.autoscaling.hpa.minReplicas Minimum number of replicas
+      ## @param backend.celery.autoscaling.hpa.maxReplicas Maximum number of replicas
+      ## @param backend.celery.autoscaling.hpa.targetCPU Target CPU utilization percentage
+      ## @param backend.celery.autoscaling.hpa.targetMemory Target Memory utilization percentage
+      ##
+      hpa:
+        enabled: false
+        minReplicas: 1
+        maxReplicas: 3
+        targetCPU: 75
+        targetMemory: ""
+    ## Network Policies
+    ## Ref: https://kubernetes.io/docs/concepts/services-networking/network-policies/
+    ##
   ## @param backend.celeryBeat.replicas Amount of celery replicas
   ## @param backend.celeryBeat.command Override the celery container command
   ## @param backend.celeryBeat.args Override the celery container args
