--- a/helmfile/apps/meet/charts/meet/templates/hpa-frontend.yaml
+++ b/helmfile/apps/meet/charts/meet/templates/hpa-frontend.yaml
@@ -7,10 +7,10 @@ SPDX-License-Identifier: APACHE-2.0
 apiVersion: {{ include "common.capabilities.hpa.apiVersion" ( dict "context" $ ) }}
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "common.names.fullname" . }}
+  name: {{ include "common.names.fullname" . }}-frontend
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
-    app.kubernetes.io/component: meet
+    app.kubernetes.io/component: meet-frontend
   {{- if .Values.commonAnnotations }}
   annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
   {{- end }}
@@ -18,7 +18,7 @@ spec:
   scaleTargetRef:
     apiVersion: {{ include "common.capabilities.deployment.apiVersion" . }}
     kind: Deployment
-    name: {{ include "common.names.fullname" . }}-backend
+    name: {{ include "common.names.fullname" . }}-frontend
   minReplicas: {{ .Values.meet.autoscaling.hpa.minReplicas }}
   maxReplicas: {{ .Values.meet.autoscaling.hpa.maxReplicas }}
   metrics:
