--- a/helmfile/apps/drive/charts/drive/templates/pdb-celery.yaml
+++ b/helmfile/apps/drive/charts/drive/templates/pdb-celery.yaml
@@ -3,26 +3,26 @@
 SPDX-License-Identifier: APACHE-2.0
 */}}
 
-{{- if .Values.drive_frontend.pdb.create }}
+{{- if .Values.drive.celery.pdb.create }}
 apiVersion: {{ include "common.capabilities.policy.apiVersion" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ include "common.names.fullname" . }}-frontend
+  name: {{ include "common.names.fullname" . }}-celery
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
-    app.kubernetes.io/component: drive-frontend
+    app.kubernetes.io/component: drive-backend-celery
   {{- if .Values.commonAnnotations }}
   annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
   {{- end }}
 spec:
-  {{- if .Values.drive_frontend.pdb.minAvailable }}
-  minAvailable: {{ .Values.drive_frontend.pdb.minAvailable }}
+  {{- if .Values.drive.celery.pdb.minAvailable }}
+  minAvailable: {{ .Values.drive.celery.pdb.minAvailable }}
   {{- end  }}
-  {{- if or .Values.drive_frontend.pdb.maxUnavailable ( not .Values.drive_frontend.pdb.minAvailable ) }}
-  maxUnavailable: {{ .Values.drive_frontend.pdb.maxUnavailable | default 1 }}
+  {{- if or .Values.drive.celery.pdb.maxUnavailable ( not .Values.drive.celery.pdb.minAvailable ) }}
+  maxUnavailable: {{ .Values.drive.celery.pdb.maxUnavailable | default 1 }}
   {{- end  }}
-  {{- $podLabels := include "common.tplvalues.merge" ( dict "values" ( list .Values.drive_frontend.podLabels .Values.commonLabels ) "context" . ) }}
+  {{- $podLabels := include "common.tplvalues.merge" ( dict "values" ( list .Values.drive.celery.podLabels .Values.commonLabels ) "context" . ) }}
   selector:
     matchLabels: {{- include "common.labels.matchLabels" ( dict "customLabels" $podLabels "context" $ ) | nindent 6 }}
-      app.kubernetes.io/component: drive-frontend
+      app.kubernetes.io/component: drive-backend-celery
 {{- end }}
