✅ (tests) Fix docspec container rule test
An empty block was needed to make the override work correctly

--- a/tests/container-rules.yaml
+++ b/tests/container-rules.yaml
@@ -71,6 +71,10 @@ container:
     registry: ""
     imagePullSecret: ""
 
+  docspec:
+    registry: ""
+    imagePullSecret: ""
+
   docs:
     registry: ""
     imagePullSecret: ""
